<resources>
    <string name="app_name">RealSensus</string>
    <string name="button_login">Masuk</string>
    <string name="button_scan">Scan</string>
    <string name="button_rescan">Scan Ulang</string>
    <string name="button_send">Kirim</string>
    <string name="button_add_data">Tambah Data</string>
    <string name="button_save">Simpan</string>
    <string name="button_cancel">Batal</string>
    <string name="button_delete">Hapus</string>
    <string name="button_edit">Ubah</string>
    <string name="text_button_close">Tutup</string>
    <string name="info_republik">REPUBLIK\nINDONESIA</string>
    <string name="info_scan">Ketuk area teks yang ingin diambil sebagai hasil SCAN</string>
    <string name="info_result">Scan Berhasil</string>
    <string name="info_title_citizen">Data Warga</string>
    <string name="info_title_result">OCR Scanner</string>
    <string name="info_title_dialog_bottom_sheet_citizen_form">Detail</string>
    <string name="info_result_scan">………</string>
    <string name="info_empty_family_card">*Nomor Kartu Keluarga harus diisi</string>
    <string name="info_empty_number_id">*Nomor NIK harus diisi</string>
    <string name="info_empty_name">*Nama harus diisi</string>
    <string name="info_empty_pob">*Tempat lahir harus diisi</string>
    <string name="info_empty_pob_dob">*Tempat tanggal lahir harus diisi</string>
    <string name="info_data_canceled">Perubahan data dibatalkan</string>
    <string name="hint_username">Nama Pengguna</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="hint_search_id">Cari Nomor KTP</string>
    <string name="hint_citizen_family_card_id">No. Kartu Keluarga</string>
    <string name="hint_citizen_number_id">No. NIK</string>
    <string name="hint_citizen_name">Nama</string>
    <string name="hint_citizen_pobDop">Tempat Tanggal Lahir</string>
    <string name="dialog_title">Judul</string>
    <string name="dialog_message">Pesan</string>
    <string name="created_by">Created by Muhammad Fakhri Pratama</string>
    <string name="creator">Muhammad Fakhri Pratama</string>

    <!-- OCR SourceText -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Diperlukan akses kamera untuk dapat melakukan deteksi</string>
    <string name="no_camera_permission">Fitur OCR pada aplikasi ini tidak dapat berjalan karena tidak memiliki izin penggunaan kamera.</string>
    <string name="low_storage_error">Ocr dependencies tidak dapat diunduh karena penyimpanan perangkat saat ini rendah</string>

</resources>