<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextFamilyCardId"
                style="@style/TextRegularBlack16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_text_form_citizen"
                android:hint="@string/hint_citizen_family_card_id"
                android:inputType="number"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewInfoFamilyCard"
                style="@style/TextRegularRed12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_empty_family_card"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/editTextFamilyCardId" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextNumberId"
                style="@style/TextRegularBlack16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text_form_citizen"
                android:hint="@string/hint_citizen_number_id"
                android:inputType="number"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewInfoFamilyCard" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewInfoNumberId"
                style="@style/TextRegularRed12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_empty_number_id"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/editTextNumberId" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextName"
                style="@style/TextRegularBlack16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text_form_citizen"
                android:hint="@string/hint_citizen_name"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewInfoNumberId" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewInfoName"
                style="@style/TextRegularRed12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_empty_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/editTextName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextPobDob"
                style="@style/TextRegularBlack16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text_form_citizen"
                android:hint="@string/hint_citizen_pobDop"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewInfoName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewInfoPobDob"
                style="@style/TextRegularRed12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_empty_pob_dob"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/editTextPobDob" />

            <Button
                android:id="@+id/buttonSave"
                style="@style/TextBoldWhite14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:text="@string/button_save"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewInfoPobDob" />

            <Button
                android:id="@+id/buttonCancel"
                style="@style/TextBoldWhite14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/background_button_red"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:text="@string/button_cancel"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonSave" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</FrameLayout>