<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/titleAlert"
            style="@style/TextBoldBlack16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="25dp"
            android:text="@string/dialog_title"
            android:visibility="visible" />

        <TextView
            android:id="@+id/messageAlert"
            style="@style/TextRegularBlack14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleAlert"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="25dp"
            android:paddingRight="10dp"
            android:paddingBottom="25dp"
            android:text="@string/dialog_message"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/messageAlert"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="100"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/negativeButton"
                style="@style/TextBoldBlack14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/background_dialog_negative_button"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/button_cancel"
                android:visibility="visible" />

            <TextView
                android:id="@+id/positiveButton"
                style="@style/TextBoldWhite14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/background_dialog_positive_button"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/ok"
                android:visibility="visible" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>