<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notificationItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCitizensDataItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/grey_light"
        app:cardCornerRadius="8dp"
        app:cardMaxElevation="1dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCitizensDataItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageGaruda"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_garuda"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".12" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewCountryName"
                style="@style/TextRegularBlack8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/info_republik"
                app:layout_constraintLeft_toLeftOf="@id/imageGaruda"
                app:layout_constraintRight_toRightOf="@id/imageGaruda"
                app:layout_constraintTop_toBottomOf="@id/imageGaruda"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewCitizenIdTitle"
                style="@style/TextBoldBlack14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Nomor KTP:"
                app:layout_constraintLeft_toRightOf="@id/imageGaruda"
                app:layout_constraintRight_toLeftOf="@id/imageEmpty"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".52" />

            <TextView
                android:id="@+id/textViewCitizenId"
                style="@style/TextRegularBlack16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="3178022556xxxxxx"
                app:layout_constraintLeft_toRightOf="@id/imageGaruda"
                app:layout_constraintRight_toLeftOf="@id/imageEmpty"
                app:layout_constraintTop_toBottomOf="@id/textViewCitizenIdTitle"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageEmpty"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_garuda"
                android:visibility="invisible"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".12" />

            <ImageView
                android:id="@+id/imageBurgerMenu"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="4dp"
                android:src="@mipmap/ic_burger_menu"
                android:visibility="visible"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".08" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewCitizenNameTitle"
                style="@style/TextRegularBlack14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Nama Penduduk:"
                app:layout_constraintLeft_toRightOf="@id/imageGaruda"
                app:layout_constraintRight_toLeftOf="@id/imageEmpty"
                app:layout_constraintTop_toBottomOf="@id/textViewCitizenId"
                app:layout_constraintWidth_percent=".52" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewCitizenName"
                style="@style/TextBoldBlue14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="Fakhri Pratama"
                app:layout_constraintLeft_toRightOf="@id/imageGaruda"
                app:layout_constraintRight_toLeftOf="@id/imageEmpty"
                app:layout_constraintTop_toBottomOf="@id/textViewCitizenNameTitle"
                app:layout_constraintWidth_percent=".52" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/background_form_citizen_dialog_rounded"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewCitizensDataItem">

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:text="@string/button_edit"
            android:textAllCaps="false"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_button_red"
            android:text="@string/button_delete"
            android:textAllCaps="false"
            app:backgroundTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>